--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "src/mom6"]
-	path = src/mom6
+[submodule "src/MOM6"]
+	path = src/MOM6
 	url = git@github.com:CommerceGov/NOAA-GFDL-MOM6.git
 [submodule "src/FMS"]
 	path = src/FMS
